org.metaborg.lang.tiger.example/tests/binding/binding10.tig
  let
    function f() : int = g(1) // error: not in scope
    var x := 1
    function g(x : int) : int = f()
  in
   1
  end 